src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Poppins", sans-serif;
  background-color: #abb1cf;
  color: #333580;
}

.container {
  max-width: 500px;
  margin: 30px auto;
  overflow: auto;
  min-height: 300px;
  background-color: #f6dde6;
  border: 5px solid #c5b9cd;
  padding: 25px;
  border-radius: 10px;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 20px;
}

.btn {
  display: inline-block;
  background: #c5b9cd;
  color: #333580;
  border: none;
  padding: 10px 20px;
  margin: 5px;
  border-radius: 5px;
  cursor: pointer;
  text-decoration: none;
  font-size: 15px;
  font-family: inherit;
}

.btn:focus {
  outline: none;
}

.btn:active {
  transform: scale(0.98);
  background-color: #333580;
}

.btn-block {
  display: block;
  width: 100%;
}

.checkbox-div {
  text-align: left;
}

.task {
  background: #dec2cb;
  margin: 5px;
  padding: 15px;
  cursor: pointer;
}

.task.reminder {
  border-left: 5px solid #92a8d1;
}

.task h3 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.add-form {
  margin-bottom: 40px;
}

.form-control {
  margin: 20px 0;
}

.form-control label {
  display: block;
}

.form-control input {
  width: 100%;
  height: 40px;
  margin: 5px;
  padding: 3px 7px;
  font-family: "Poppins", sans-serif;
  font-size: 17px;
  color: #333580;
}

input[type="date"]::-webkit-calendar-picker-indicator {
  filter: invert(50%);
}

input[type="time"]::-webkit-calendar-picker-indicator {
  filter: invert(50%);
}

.form-control-check {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.form-control-check label {
  flex: 1;
}

.form-control-check input {
  flex: 2;
  height: 20px;
}

footer {
  margin-top: 30px;
  text-align: center;
}

